@@ -1,3 +1,8 @@
+2011-06-15  Hui Zhu  <teawater@gmail.com>
+
+	* remote.c (remote_trace_set_readonly_regions): Add a check for
+	target_buf_size.
+
 2011-06-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* symtab.c (output_partial_symbol_filename): Exchange the filename and
